background made white

--- a/suggest.html
+++ b/suggest.html
@@ -17,7 +17,6 @@
 <body>
 
     <div id="wrapper">
-
         <!-- Navigation -->
         <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
             <div class="navbar-header">
@@ -82,6 +81,7 @@
                                 </div>
                             </a>
                         </li>
+
                         <li class="message-footer">
                             <a href="#">Read All New Messages</a>
                         </li>
@@ -134,6 +134,7 @@
                         </li>
                     </ul>
                 </li>
+
             </ul>
             <!-- Sidebar Menu Items - These collapse to the responsive navigation menu on small screens -->
             <div class="collapse navbar-collapse navbar-ex1-collapse">
@@ -178,7 +179,7 @@
   <button type="button" class="btn btn-primary"><a href="index.html" style="color:white; text-decoration:none;">&nbsp;&nbsp;Post&nbsp;&nbsp;</a></button>
   <button type="button" class="btn btn-primary"><a href="email.html" style="color:white; text-decoration:none;">&nbsp;&nbsp;Email&nbsp;&nbsp;</a></button>
   <button type="button" class="btn btn-primary activa"><a href="suggest.html" style="color:white; text-decoration:none;">&nbsp;&nbsp;Suggest&nbsp;&nbsp;</a></button>
-</div>
+                </div>
 <br/>
 <br/>
 <nav class="navbar navbar-default">
@@ -221,7 +222,7 @@
                         <h1 class="page-header">
                             Automate :
                         </h1>
-                        <div class="jumbotron">
+                        <div class="jumbotron" style="background-color:white;">
                           <h3 style="margin-top:-5vh;">Customize: <i class="fa fa-exclamation-circle"></i></h3>
                           <div class="row" style="transform:translateX(25%);">
                     <div class="col-lg-6">
@@ -236,27 +237,25 @@
                         <div class="row" style="transform:translateX(25%);">
                   <div class="col-lg-6">
                             <a style="text-decoration:none;" href="#">www.example.com/feed <span class="badge">X</span></a>
-                            <button class="btn btn-primary" type="button" style="transform:translate(600%,40%);">Update
-                            </button>
-                              <br/>
+                            <button class="btn btn-primary" type="button" style="transform:translate(600%,40%);">Update</button>
+                            <br/>
                             <a style="text-decoration:none;" href="#">www.example1.com/feed <span class="badge">X</span></a>
                             <br/><br/>
-                            <button class="btn btn-primary col-lg-12" type="button">Click me for a RSS Broadcast
-                            </button>
+                            <button class="btn btn-primary col-lg-12" type="button">Click me for a RSS Broadcast</button>
                           </div>
                         </div>
                       </div>
-</div>
                     </div>
+                  </div>
 
                     <div class="row">
                         <div class="col-lg-12">
                             <h1 class="page-header">
                                 Automate :
                             </h1>
-                            <div class="jumbotron">
+                            <div class="jumbotron" style="background-color:white;">
                               <div class="row" style="transform:translateX(25%);">
-                        <div class="col-lg-6">
+                                <div class="col-lg-6">
                                 <div class="form-group">
                                     <input class="form-control" placeholder="Enter keyworkds related to your post to get the most efficent tags">
                                     <button class="btn btn-primary" type="button" style="transform:translateX(800%);">Submit
@@ -267,41 +266,39 @@
                                     </button>
                                 </div>
                                 <div class="panel panel-default">
-  <div class="panel-body">
-    <span class="badge">Tag X</span>
-    <span class="badge">Tag X</span>
-    <span class="badge">Tag X</span>
-    <span class="badge">Tag X</span>
-    <span class="badge">Tag X</span>
-    <span class="badge">Tag X</span>
-    <span class="badge">Tag X</span>
-    <span class="badge">Tag X</span>
-    <span class="badge">Tag X</span>
-  </div>
-  </div>
-  <p>
-  <button class="btn btn-default" type="button" style="transform:translateX(850%);">Clear
-  </button>&nbsp;&nbsp;&nbsp;&nbsp;
-  <button class="btn btn-default" type="button" style="transform:translateX(850%);">Copy
-  </button>
+                                  <div class="panel-body">
+                                    <span class="badge">Tag X</span>
+                                    <span class="badge">Tag X</span>
+                                    <span class="badge">Tag X</span>
+                                    <span class="badge">Tag X</span>
+                                    <span class="badge">Tag X</span>
+                                    <span class="badge">Tag X</span>
+                                    <span class="badge">Tag X</span>
+                                    <span class="badge">Tag X</span>
+                                    <span class="badge">Tag X</span>
+                                  </div>
+                                </div>
+
+<p>
+  <button class="btn btn-default" type="button" style="transform:translateX(850%);">Clear</button>&nbsp;&nbsp;&nbsp;&nbsp;
+  <button class="btn btn-default" type="button" style="transform:translateX(850%);">Copy</button>
 </p>
 
                               </div>
                             </div>
-
                           </div>
-    </div>
                         </div>
+                      </div>
+
                         <div class="row">
                             <div class="col-lg-12">
                                 <h1 class="page-header">
                                       Content Suggester :
                                 </h1>
-                                <div class="jumbotron">
-
+                                <div class="jumbotron" style="background-color:white;">
                                   <div class="row" style="transform:translateX(25%);">
-                            <div class="col-lg-6">
-                                    <div class="form-group">
+                                    <div class="col-lg-6">
+                                      <div class="form-group">
                                         <input class="form-control" style="height:20vh;" placeholder="Enter keywords for search">
                                         <div class="btn-group" style="transform:translate(700%, -400%);">
   <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -312,24 +309,18 @@
     <li><a href="#">Facebook</a></li>
     <li><a href="#">LinkedIn</a></li>
   </ul>
-</div>
+                                      </div>
                                         <br/>
                                         <input class="form-control" placeholder="Enter Username or Handle">
                                     </div>
-                                    <button class="btn btn-primary" type="button" style="transform:translateX(800%);">Submit
-                                    </button>
-                                    <button class="btn btn-primary col-lg-12" type="button">Click me to know about what's Trending
-                                    </button>
+                                    <button class="btn btn-primary" type="button" style="transform:translateX(800%);">Submit</button>
+                                    <button class="btn btn-primary col-lg-12" type="button">Click me to know about what's Trending</button>
                                   </div>
-
                                 </div>
-
                               </div>
-        </div>
                             </div>
-                </div>
-
-
+                          </div>
+                        </div>
         <hr/>
         <!-- /#page-wrapper -->
     </div>
@@ -341,7 +332,7 @@
         <i class="fa fa-twitter-square" style="font-size:25pt; padding-right:10pt;"></i>
         <i class="fa fa-instagram" style="font-size:25pt;"></i>
       </p>
-    </div>
+  </div>
 </div>
 <hr/>
 <table class="table2">
@@ -358,18 +349,13 @@
 </table>
 <br/>
     <!-- /#wrapper -->
-
     <!-- jQuery -->
     <script src="js/jquery.js"></script>
-
     <!-- Bootstrap Core JavaScript -->
     <script src="js/bootstrap.min.js"></script>
-
     <!-- Morris Charts JavaScript -->
     <script src="js/plugins/morris/raphael.min.js"></script>
     <script src="js/plugins/morris/morris.min.js"></script>
     <script src="js/plugins/morris/morris-data.js"></script>
-
 </body>
-
 </html>
