--- a/email.html
+++ b/email.html
@@ -17,7 +17,6 @@
 <body>
 
     <div id="wrapper">
-
         <!-- Navigation -->
         <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
             <div class="navbar-header">
@@ -82,6 +81,7 @@
                                 </div>
                             </a>
                         </li>
+
                         <li class="message-footer">
                             <a href="#">Read All New Messages</a>
                         </li>
@@ -178,7 +178,7 @@
                   <button type="button" class="btn btn-primary"><a href="index.html" style="color:white; text-decoration:none;">&nbsp;&nbsp;Post&nbsp;&nbsp;</a></button>
                   <button type="button" class="btn btn-primary activa"><a href="email.html" style="color:white; text-decoration:none;">&nbsp;&nbsp;Email&nbsp;&nbsp;</a></button>
                   <button type="button" class="btn btn-primary"><a href="suggest.html" style="color:white; text-decoration:none;">&nbsp;&nbsp;Suggest&nbsp;&nbsp;</a></button>
-</div>
+                </div>
 <br/>
 <br/>
 <nav class="navbar navbar-default">
@@ -225,11 +225,11 @@
                                     <input type="text" class="form-control" placeholder="To:">
                                     <span class="input-group-addon">CC</span>
                                     <span class="input-group-addon">BCC</span>
-                                </div>
-                            <div class="form-group">
+                        </div>
+                        <div class="form-group">
                                     <input class="form-control" placeholder="Title:">
-                                </div>
-                              <textarea style="height:30vh;">Type Here...</textarea>
+                        </div>
+                        <textarea style="height:30vh;">Type Here...</textarea>
                     </div>
                 </div>
 
@@ -258,12 +258,10 @@
                        <h1 class="page-header">
                            Mails :
                        </h1>
-
                    </div>
                </div>
 
-
-               <div class="jumbotron">
+               <div class="jumbotron" style="background-color:white;">
                  <div class="pull-right btn-group" style="position:relative; top:-10%; margin-right:20px;">
                    <button type="button" class="btn btn-default">Past</button>
                    <button type="button" class="btn btn-primary">Future</button>
@@ -291,21 +289,20 @@
                          <td class="col1"><button type="button" class="btn btn-primary">Delete</button></td>
                        </tr>
                      </table>
-
             <!-- /.container-fluid -->
         </div>
         <hr/>
         <!-- /#page-wrapper -->
     </div>
   </div>
-  <div class="row" style="background-color:white;">
-    <div class="col-lg-12" style="text-align:center;">
+<div class="row" style="background-color:white;">
+  <div class="col-lg-12" style="text-align:center;">
       <p>
         <i class="fa fa-facebook-square" style="font-size:25pt; padding-right:10pt;"></i>
         <i class="fa fa-twitter-square" style="font-size:25pt; padding-right:10pt;"></i>
         <i class="fa fa-instagram" style="font-size:25pt;"></i>
       </p>
-    </div>
+  </div>
 </div>
 <hr/>
 <table class="table2">
@@ -322,18 +319,13 @@
 </table>
 <br/>
     <!-- /#wrapper -->
-
     <!-- jQuery -->
     <script src="js/jquery.js"></script>
-
     <!-- Bootstrap Core JavaScript -->
     <script src="js/bootstrap.min.js"></script>
-
     <!-- Morris Charts JavaScript -->
     <script src="js/plugins/morris/raphael.min.js"></script>
     <script src="js/plugins/morris/morris.min.js"></script>
     <script src="js/plugins/morris/morris-data.js"></script>
-
 </body>
-
 </html>
