--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
 <body>
 
     <div id="wrapper">
-
         <!-- Navigation -->
         <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
             <div class="navbar-header">
@@ -82,6 +81,7 @@
                                 </div>
                             </a>
                         </li>
+
                         <li class="message-footer">
                             <a href="#">Read All New Messages</a>
                         </li>
@@ -134,6 +134,7 @@
                         </li>
                     </ul>
                 </li>
+
             </ul>
             <!-- Sidebar Menu Items - These collapse to the responsive navigation menu on small screens -->
             <div class="collapse navbar-collapse navbar-ex1-collapse">
@@ -178,7 +179,7 @@
   <button type="button" class="btn btn-primary activa"><a href="index.html" style="color:white; text-decoration:none;">&nbsp;&nbsp;Post&nbsp;&nbsp;</a></button>
   <button type="button" class="btn btn-primary"><a href="email.html" style="color:white; text-decoration:none;">&nbsp;&nbsp;Email&nbsp;&nbsp;</a></button>
   <button type="button" class="btn btn-primary"><a href="suggest.html" style="color:white; text-decoration:none;">&nbsp;&nbsp;Suggest&nbsp;&nbsp;</a></button>
-</div>
+                </div>
 <br/>
 <br/>
 <nav class="navbar navbar-default">
@@ -215,7 +216,7 @@
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
 </nav>
-
+<!--main body starts -->
                 <div class="row">
                     <div class="col-lg-12">
                         <h1 class="page-header">
@@ -231,9 +232,9 @@
                    <button type="button" class="btn btn-lg btn-default"><i class="fa fa-smile-o"></i> <i class="fa fa-plus"></i> </button>&nbsp;&nbsp;
                    <button type="button" class="btn btn-lg btn-default"><i class="fa fa-picture-o"></i> Template </button>&nbsp;&nbsp;
                    <button type="button" class="pull-right btn btn-lg btn-primary">Post </button>&nbsp;&nbsp;
-                       <button type="button" class="btn btn-primary">Schedule </button>
-                       <button type="button" style="margin-left:-2pt;" class="btn btn-primary dropdown-toggle" data-toggle="dropdown">
-                         <i class="fa fa-calendar"></i> <span class="caret"></span></button>
+                   <button type="button" class="btn btn-primary">Schedule </button>
+                   <button type="button" style="margin-left:-2pt;" class="btn btn-primary dropdown-toggle" data-toggle="dropdown">
+                     <i class="fa fa-calendar"></i><span class="caret"></span></button>
                          <ul class="dropdown-menu" role="menu">
                            <li><a href="#">Tablet</a></li>
                            <li><a href="#">Smartphone</a></li>
@@ -245,12 +246,10 @@
                        <h1 class="page-header">
                            Post :
                        </h1>
-
                    </div>
                </div>
 
-
-               <div class="jumbotron">
+               <div class="jumbotron" style="background-color:white;">
                  <div class="pull-right btn-group" style="position:relative; top:-10%; margin-right:20px;">
                    <button type="button" class="btn btn-default">Past</button>
                    <button type="button" class="btn btn-primary">Future</button>
@@ -278,7 +277,6 @@
                          <td class="col1"><button type="button" class="btn btn-primary">Delete</button></td>
                        </tr>
                      </table>
-
             <!-- /.container-fluid -->
         </div>
         <hr/>
@@ -309,18 +307,14 @@
 </table>
 <br/>
     <!-- /#wrapper -->
-
     <!-- jQuery -->
     <script src="js/jquery.js"></script>
-
     <!-- Bootstrap Core JavaScript -->
     <script src="js/bootstrap.min.js"></script>
-
     <!-- Morris Charts JavaScript -->
     <script src="js/plugins/morris/raphael.min.js"></script>
     <script src="js/plugins/morris/morris.min.js"></script>
     <script src="js/plugins/morris/morris-data.js"></script>
-
 </body>
 
 </html>
