--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
                 </div>
 <br/>
 <br/>
-<nav class="navbar navbar-default">
+<nav class="navbar navbar-default" style="background-color:white;">
   <div class="container-fluid">
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
