--- a/email.html
+++ b/email.html
@@ -153,10 +153,10 @@
                         <a href="#"><i class="fa fa-fw fa-line-chart"></i> Trending</a>
                     </li>
                     <li>
-                        <a href="#"><i class="fa fa-fw fa-android"></i> Bots</a>
+                        <a href="bot.html"><i class="fa fa-fw fa-android"></i> Bots</a>
                     </li>
                     <li class="active">
-                        <a href="#"><i class="fa fa-fw fa-users"></i> Social Media</a>
+                        <a href="email.html"><i class="fa fa-fw fa-users"></i> Social Media</a>
                     </li>
                     <li>
                         <a href="#"><i class="fa fa-fw fa-cogs"></i> Settings</a>
