--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                            </div>
                   </li>
                     <li>
-                        <a href="index.html"><i class="fa fa-fw fa-dashboard"></i> Dashboard</a>
+                        <a href="#"><i class="fa fa-fw fa-dashboard"></i> Dashboard</a>
                     </li>
                     <li>
                         <a href="#"><i class="fa fa-fw fa-bar-chart-o"></i> Subscribers</a>
@@ -154,10 +154,10 @@
                         <a href="#"><i class="fa fa-fw fa-line-chart"></i> Trending</a>
                     </li>
                     <li>
-                        <a href="#"><i class="fa fa-fw fa-android"></i> Bots</a>
+                        <a href="bot.html"><i class="fa fa-fw fa-android"></i> Bots</a>
                     </li>
                     <li class="active">
-                        <a href="#"><i class="fa fa-fw fa-users"></i> Social Media</a>
+                        <a href="index.html"><i class="fa fa-fw fa-users"></i> Social Media</a>
                     </li>
                     <li>
                         <a href="#"><i class="fa fa-fw fa-cogs"></i> Settings</a>
